--- a/app/src/main/res/drawable/ic_baseline_arrow_next_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_arrow_next_24.xml
@@ -1,9 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
+    android:autoMirrored="true"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="#ffffff"
-        android:pathData="M14,7l-5,5 5,5V7z" />
+        android:pathData="M10,17l5,-5 -5,-5v10z" />
 </vector>
