Minor bug fixes
- ManagedPreference.OnChangeListener not fired
- TOOL_TYPE_UNKNOWN causes virtual keyboard to be hidden
-  Title of CandidatesSettingsFragment is wrong

--- a/app/src/main/res/navigation/settings_nav.xml
+++ b/app/src/main/res/navigation/settings_nav.xml
@@ -245,7 +245,7 @@
     <fragment
         android:id="@+id/candidatesSettingsFragment"
         android:name="org.fcitx.fcitx5.android.ui.main.settings.behavior.CandidatesSettingsFragment"
-        android:label="@string/virtual_keyboard" />
+        android:label="@string/candidates_window" />
     <fragment
         android:id="@+id/clipboardSettingsFragment"
         android:name="org.fcitx.fcitx5.android.ui.main.settings.behavior.ClipboardSettingsFragment"
